# PrERT-CNM-v4

./: .env.example  .gitignore  CHANGELOG.md  MEMORY.md  README.md  pyproject.toml
.github/workflows/: update-wakatime-total.yml
.streamlit/: config.toml  secrets.toml.example
artifacts/: .gitignore  README.md
artifacts/phase-1/: NIST-1.1.txt  chunks_all.jsonl  chunks_gdpr.jsonl  chunks_iso27001.jsonl  chunks_nistpf.jsonl  controls_all.jsonl  controls_gdpr.jsonl  controls_iso27001.jsonl  controls_nistpf.jsonl
artifacts/phase-2/: baseline_scores.jsonl  metric_specs.jsonl  phase2_manifest.json  public_data_mapped.jsonl  synthetic_data_dictionary.md  synthetic_events.jsonl
artifacts/phase-3/: classifier_metrics.json  classifier_metrics.jsonl  dataset_manifest.json  model_card.md  phase3_manifest.json  prototype_demo.md  scoring_spec.md  test_dataset.jsonl  test_predictions.jsonl  training_dataset.jsonl  validation_dataset.jsonl  validation_predictions.jsonl
artifacts/phase-3-focal-smoke/: model_card.md  prototype_demo.md
artifacts/phase-3-freeze/: dataset_manifest.json  model_card.md  phase3_acceptance_report.md  prototype_demo.md  scoring_spec.md
artifacts/phase-3-logreg/: classifier_metrics.json  classifier_metrics.jsonl  model_card.md  phase3_manifest.json  test_predictions.jsonl  validation_dataset.jsonl  validation_predictions.jsonl
artifacts/phase-3-logreg/classifier_checkpoint/: model.pkl
artifacts/phase-3-nb/: classifier_metrics.json  model_card.md  phase3_manifest.json  prototype_demo.md  test_dataset.jsonl
artifacts/phase-3-no-bayes/: model_card.md  scoring_spec.md
artifacts/phase-3-opp-app350-nb/: model_card.md  scoring_spec.md
artifacts/phase-3-opp-logreg-312/: prototype_demo.md
artifacts/phase-3-opp-privacybert-312/: model_card.md
artifacts/phase-3-opp-privacybert-smoke/: model_card.md
artifacts/phase-3-opp-privacybert-smoke-312/: model_card.md
artifacts/phase-3-privacybert/: model_card.md  scoring_spec.md
artifacts/phase-3-warning-smoke2/: model_card.md  scoring_spec.md
artifacts/phase-3/classifier_checkpoint/: model.json
artifacts/phase-4/: phase4_validation_report.md
artifacts/phase-4-demo-check/: phase4_validation_report.md
artifacts/phase-4-opp-app350-compare/: phase4_validation_report.md
artifacts/phase-4-opp-logreg-312-compare/: benchmark_recheck_report.md  phase4_validation_report.md
artifacts/phase-4-opp-logreg-compare/: benchmark_recheck_report.md  phase4_validation_report.md
artifacts/phase-4-recheck/: phase4_validation_report.md
data/: README.md
deployment/demo-assets/: phase4_demo_bundle_manifest.json
deployment/demo-assets/phase-3-freeze/: bayesian_risk_test.json  classifier_metrics.json  classifier_metrics.jsonl  dataset_manifest.json  phase3_manifest.json  (+2 more)
docs/: README.md  dataset-options.md  reproducability.md
docs/Export/: README.md
docs/Formative-Viva/: Breif.md
docs/Polisis/: README.md
docs/Project/: Proposal-extracted.md  Proposal-phase-template.md  Proposal.txt
docs/Proposal/: proposal.tex  references.bib
docs/Standards/: .gitignore
huggingface/: README.md
huggingface/model-card/: .gitattributes  README.md
huggingface/space/: README.md  app.py  benchmarks.json  requirements.txt
scripts/: check_ground_truth_alignment.py  extract_phase1_controls.py  generate_phase12_dashboard_figures.py  generate_phase3_dashboard_figures.py  migrate_to_chroma.py  prepare_huggingface_release.py  prepare_phase4_demo_bundle.py  process_opp115_for_phase2.py  run_phase2_metrics.py  run_phase3_acceptance_freeze.py  run_phase3_baseline.py  run_phase4_synthetic_data.py  run_phase4_validation.py  run_phase4_web.py  update_wakatime_totals.py
src/prert/: __init__.py  config.py
tests/: test_chunking.py  test_cli_meta.py  test_docx_extractors.py  test_extractors.py  test_import_boundaries.py  test_phase2_opp115_processor.py  test_phase2_pipeline.py  test_phase3_acceptance.py  test_phase3_analytics.py  test_phase3_app350.py  test_phase3_classifier.py  test_phase3_pipeline.py  test_phase3_polisis_loader.py  test_phase4_compliance_assessor.py  test_phase4_policy_compliance.py  test_phase4_synthetic.py  test_phase4_validation.py  test_phase4_visual_layers.py
(+119 files in other folders)
