[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prert-cnm-v4"
version = "0.1.0"
description = "Phase 1 regulation extraction and Chroma Cloud ingestion for privacy ground truth"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.1.0",
  "chromadb>=1.5.5",
  "datasets>=3.2.0",
  "httpx>=0.28.1",
  "matplotlib>=3.10.6",
  "scikit-learn>=1.5.2",
  "python-dotenv>=1.2.2",
  "streamlit>=1.44.1",
  "pypdf>=6.9.2",
  "pytest>=9.0.2",
  "ruff>=0.15.9",
  "torch>=2.5.0",
  "transformers>=4.48.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.9"
]

[project.scripts]
prert-extract = "prert.cli.extract:main"
prert-migrate = "prert.cli.migrate:main"
prert-phase2 = "prert.cli.phase2:main"
prert-phase3 = "prert.cli.phase3:main"
prert-phase3-freeze = "prert.cli.phase3_freeze:main"
prert-phase4 = "prert.cli.phase4:main"
prert-phase4-web = "prert.cli.phase4_web:main"
prert-phase4-synth = "prert.cli.phase4_synthetic:main"
prert-opp115 = "prert.cli.opp115:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
