[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prert-cnm-v4"
version = "0.1.0"
description = "Phase 1 regulation extraction and Chroma Cloud ingestion for privacy ground truth"
readme = "docs/README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "accelerate>=1.13.0",
  "chromadb>=1.5.9",
  "datasets>=4.8.5",
  "httpx>=0.28.1",
  "matplotlib>=3.10.9",
  "PyYAML>=6.0.2",
  "scikit-learn>=1.8.0",
  "python-dotenv>=1.2.2",
  "python-docx>=1.2.0",
  "pypdf>=6.10.2",
  "streamlit>=1.57.0",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "torch>=2.11.0",
  "transformers>=5.8.0"
]

[project.scripts]
prert = "prert.cli.main:main"
prert-extract = "prert.cli.extract:main"
prert-migrate = "prert.cli.migrate:main"
prert-phase2 = "prert.cli.phase2:main"
prert-app350 = "prert.cli.app350:main"
prert-phase3 = "prert.cli.phase3:main"
prert-phase3-freeze = "prert.cli.phase3_freeze:main"
prert-phase4 = "prert.cli.phase4:main"
prert-phase4-web = "prert.cli.phase4_web:main"
prert-phase4-synth = "prert.cli.phase4_synthetic:main"
prert-opp115 = "prert.cli.opp115:main"

[tool.poetry]
packages = [{ include = "prert", from = "src" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
